<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#cc000000">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingTop="20dp"
        android:paddingBottom="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/dialog_num_input_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="55dp"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="30dp">

                <EditText
                    android:id="@+id/input_num_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:background="@android:color/transparent"
                    android:hint="type number"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:focusableInTouchMode="false"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:text="Say your home number"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                app:cardCornerRadius="30dp">
                <!-- MODAL DIAL PAD -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:paddingTop="20dp"
                    android:paddingBottom="40dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/input_num_one"
                            style="@style/ButtonThemeInputNum"
                            android:text="@string/dial_num_one" />

                        <Button
                            android:id="@+id/input_num_two"
                            style="@style/ButtonThemeInputNum"
                            android:text="@string/dial_num_two" />

                        <Button
                            android:id="@+id/input_num_three"
                            style="@style/ButtonThemeInputNum"
                            android:text="@string/dial_num_three" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/input_num_four"
                            style="@style/ButtonThemeInputNum"
                            android:text="@string/dial_num_four" />

                        <Button
                            android:id="@+id/input_num_five"
                            style="@style/ButtonThemeInputNum"
                            android:text="@string/dial_num_five" />

                        <Button
                            android:id="@+id/input_num_six"
                            style="@style/ButtonThemeInputNum"
                            android:text="@string/dial_num_six" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/input_num_seven"
                            style="@style/ButtonThemeInputNum"
                            android:text="@string/dial_num_seven" />

                        <Button
                            android:id="@+id/input_num_eight"
                            style="@style/ButtonThemeInputNum"
                            android:text="@string/dial_num_eight" />

                        <Button
                            android:id="@+id/input_num_nine"
                            style="@style/ButtonThemeInputNum"
                            android:text="@string/dial_num_nine" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/input_num_star"
                            style="@style/ButtonThemeInputNum"
                            android:text="@string/dial_num_star" />

                        <Button
                            android:id="@+id/input_num_zero"
                            style="@style/ButtonThemeInputNum"
                            android:text="@string/dial_num_zero" />

                        <Button
                            android:id="@+id/input_num_sheet"
                            style="@style/ButtonThemeInputNum"
                            android:text="@string/dial_num_sheet" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="30dp"
            android:clipToPadding="false"
            android:paddingBottom="10dp"
            android:gravity="right"
            android:layout_alignBottom="@id/dialog_num_input_content">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/button_cancel"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:backgroundTint="@android:color/white"
                android:elevation="20dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_cancel" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/button_save"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:elevation="20dp"
                android:src="@drawable/fab_apply" />
        </LinearLayout>
    </RelativeLayout>



</android.support.constraint.ConstraintLayout>