<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:background="@color/colorBackgroundLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="60dp"
    android:theme="@style/AppTheme"
    android:elevation="60dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <RelativeLayout
        android:id="@+id/relative_dial_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"

        android:paddingTop="5dp">

        <ImageButton
            android:id="@+id/dial_button_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_button_circle"
            android:onClick="onAction"
            android:padding="5dp"
            android:src="@drawable/ic_phone_white" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_outer"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            android:layout_toLeftOf="@id/dial_button_action"
            android:elevation="12dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/edit_text_dial_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:focusableInTouchMode="false"
                android:hint="@string/edit_text_dial_num_hint"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:onClick="onClickEditTextDialNum"

                android:textAlignment="center"
                android:textSize="15sp" />

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/dial_pad_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLight"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/dial_space"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/dial_row_first">

            <TextView
                android:id="@+id/text_contact_data_short"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAlignment="center"
                android:visibility="invisible"
                android:text="John Doe" />
        </LinearLayout>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/dial_image_face"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder_face"
            app:civ_border_color="@color/colorBackgroundLightTwo"
            app:civ_border_width="1dp"
            app:civ_shadow="true"
            app:civ_shadow_color="@android:color/darker_gray"
            app:civ_shadow_radius="20"
            app:layout_constraintBottom_toTopOf="@+id/dial_call"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <LinearLayout
            android:id="@+id/dial_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"

            android:layout_marginBottom="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/shape_dial_pad_call_ripple"
            android:elevation="15dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toTopOf="@id/dial_row_first"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/dial_call_button_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="dial_call"
                android:src="@drawable/image_icon_phone_white" />

            <EditText
                android:id="@+id/dial_pad_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/dial_pad_call_hint"
                android:inputType="phone"
                android:maxLength="30"
                android:onClick="onCall"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="25sp"
                android:windowSoftInputMode="stateAlwaysHidden|adjustNothing"
                app:layout_constraintTop_toBottomOf="@id/dial_image_face" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/dial_clear"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginRight="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="clear_button"
            android:gravity="end"
            android:onClick="onClear"
            android:padding="10dp"
            android:src="@drawable/ic_backspace"
            app:layout_constraintBottom_toTopOf="@id/dial_row_first"
            app:layout_constraintRight_toRightOf="parent" />

        <LinearLayout
            android:id="@+id/dial_row_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:weightSum="3"
            app:layout_constraintBottom_toTopOf="@id/dial_row_second">

            <Button
                android:id="@+id/dial_num_one"
                style="@style/ButtonThemeDialNum"
                android:onClick="onClickDialNum"
                android:text="@string/dial_num_one" />

            <Button
                android:id="@+id/dial_num_two"
                style="@style/ButtonThemeDialNum"
                android:onClick="onClickDialNum"
                android:text="@string/dial_num_two" />

            <Button
                android:id="@+id/dial_num_three"
                style="@style/ButtonThemeDialNum"
                android:onClick="onClickDialNum"
                android:text="@string/dial_num_three" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dial_row_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/dial_row_third">

            <Button
                android:id="@+id/dial_num_four"
                style="@style/ButtonThemeDialNum"
                android:onClick="onClickDialNum"
                android:text="@string/dial_num_four" />

            <Button
                android:id="@+id/dial_num_five"
                style="@style/ButtonThemeDialNum"
                android:onClick="onClickDialNum"
                android:text="@string/dial_num_five" />

            <Button
                android:id="@+id/dial_num_six"
                style="@style/ButtonThemeDialNum"
                android:onClick="onClickDialNum"
                android:text="@string/dial_num_six" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dial_row_third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/dial_row_fourth">

            <Button
                android:id="@+id/dial_num_seven"
                style="@style/ButtonThemeDialNum"
                android:onClick="onClickDialNum"
                android:text="@string/dial_num_seven" />

            <Button
                android:id="@+id/dial_num_eight"
                style="@style/ButtonThemeDialNum"
                android:onClick="onClickDialNum"
                android:text="@string/dial_num_eight" />

            <Button
                android:id="@+id/dial_num_nine"
                style="@style/ButtonThemeDialNum"
                android:onClick="onClickDialNum"
                android:text="@string/dial_num_nine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dial_row_fourth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/dial_num_ulduz"
                style="@style/ButtonThemeDialNum"
                android:onClick="onClickDialNum"
                android:text="@string/dial_num_star" />

            <Button
                android:id="@+id/dial_num_zero"
                style="@style/ButtonThemeDialNum"
                android:onClick="onClickDialNum"
                android:text="@string/dial_num_zero" />

            <Button
                android:id="@+id/dial_num_diyez"
                style="@style/ButtonThemeDialNum"
                android:onClick="onClickDialNum"
                android:text="@string/dial_num_sheet" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>